[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
description = "a msgpack-rpc client and server based on tokio"
homepage = "https://github.com/sollimann/msgpack-rpc"
keywords = ["msgpack", "rpc", "msgpack-rpc"]
license-file = "LICENSE-MIT"
edition = "2021"
name = "msgpack-rpc"
readme = "README.md"
repository = "https://github.com/sollimann/msgpack-rpc"
rust-version = "1.60.0"
version = "0.4.2"

[dependencies]
bytes = "1.2.1"
futures = "0.3.25"
log = "0.4.17"
rmpv = "1.0.0"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec", "compat"] }

[dev-dependencies]
env_logger = "0.9.1"
chrono = "0.4.22"
tokio = { version = "1.4", features = ["macros", "net", "time"] }
